--- a/Mia/Mia.csproj
+++ b/Mia/Mia.csproj
@@ -128,6 +128,8 @@
     <Compile Include="DeviceOrientation\DeviceOrientationChangeMessage.cs" />
     <Compile Include="DeviceOrientation\DeviceOrientations.cs" />
     <Compile Include="DeviceOrientation\IDeviceOrientation.cs" />
+    <Compile Include="GradientTheme\Theme.cs" />
+    <Compile Include="GradientTheme\ThemePreview.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -199,6 +201,7 @@
     <Folder Include="Data Services\" />
     <Folder Include="SpeechToText\" />
     <Folder Include="Contact\" />
+    <Folder Include="GradientTheme\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
