Fix most Android bugs. Update Permission Check

--- a/Mia/Mia.csproj
+++ b/Mia/Mia.csproj
@@ -130,6 +130,7 @@
     <Compile Include="DeviceOrientation\IDeviceOrientation.cs" />
     <Compile Include="GradientTheme\Theme.cs" />
     <Compile Include="GradientTheme\ThemePreview.cs" />
+    <Compile Include="Helpers\PermissionUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
