--- a/Droid/Mia.Droid.csproj
+++ b/Droid/Mia.Droid.csproj
@@ -173,6 +173,7 @@
     <Reference Include="Plugin.Geolocator">
       <HintPath>..\packages\Xam.Plugin.Geolocator.4.0.1\lib\MonoAndroid10\Plugin.Geolocator.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mia\Mia.csproj">
@@ -243,7 +244,7 @@
     <AndroidResource Include="Resources\drawable-xxhdpi-v11\plugin_lc_smallicon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\plugin_lc_smallicon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi-v11\plugin_lc_smallicon.png" />
-    <AndroidResource Include="Resources\drawable\playstore-icon.png" />
+    <AndroidResource Include="Resources\drawable\playstore_icon.png" />
     <AndroidResource Include="Resources\drawable-mdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\icon.png" />
   </ItemGroup>
@@ -344,6 +345,14 @@
     <AndroidAsset Include="..\Resources\Weather\weather_tstorms_night.mp4">
       <Link>Assets\Weather\weather_tstorms_night.mp4</Link>
     </AndroidAsset>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidEmbeddedJavaLibrary Include="Assets\SpeechSDK.jar" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidNativeLibrary Include="Assets\libs\armeabi\libandroid_platform.so" />
+    <AndroidNativeLibrary Include="Assets\libs\armeabi-v7a\libandroid_platform.so" />
+    <AndroidNativeLibrary Include="Assets\libs\x86\libandroid_platform.so" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Annotations.25.3.1\build\MonoAndroid70\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Annotations.25.3.1\build\MonoAndroid70\Xamarin.Android.Support.Annotations.targets')" />
