--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -11,9 +11,10 @@
 	<uses-permission android:name="android.permission.BIND_VOICE_INTERACTION" />
 	<uses-permission android:name="android.permission.LOCATION_HARDWARE" />
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
-	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:label="Mia" android:icon="@drawable/icon"></application>
+	<application android:label="Mia" android:icon="@drawable/icon">
+		<activity android:name="Mia" android:label="Mia"></activity>
+	</application>
 </manifest>
